Stop tab wrap at large bp

--- a/src/main/name-title-tabs/tabs.scss
+++ b/src/main/name-title-tabs/tabs.scss
@@ -7,6 +7,10 @@ ul {
 
 .tabs {
   flex-wrap: wrap;
+
+  @media (min-width: 960px) {
+    flex-wrap: nowrap;
+  }
 }
 
 li.tab {
